[package]
name = "sakamoto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight = "0.9"
twilight-cache-inmemory = "0.9"
twilight-gateway = "0.9"
twilight-model = "0.9"
twilight-http = "0.9"
twilight-standby = "0.9"
futures = "0.3"
tokio = { version = "1.17", features = ["rt-multi-thread", "macros", "time"] }
lazy_static = "1"
sled = "0.34"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"